; ModuleID = '/home/carl/AnghaBench/libgit2/tests/extr_clar.c_abort_test.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/extr_clar.c_abort_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@_clar = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [51 x i8] c"Fatal error: a cleanup method raised an exception.\00", align 1
@CL_TRACE__TEST__LONGJMP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @abort_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @abort_test() #0 {
  %1 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @_clar, i32 0, i32 2), align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %8, label %3

3:                                                ; preds = %0
  %4 = call i32 @clar_print_onabort(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0))
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @_clar, i32 0, i32 1), align 4
  %6 = call i32 @clar_report_errors(i32 %5)
  %7 = call i32 @exit(i32 -1) #3
  unreachable

8:                                                ; preds = %0
  %9 = load i32, i32* @CL_TRACE__TEST__LONGJMP, align 4
  %10 = call i32 @CL_TRACE(i32 %9)
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @_clar, i32 0, i32 0), align 4
  %12 = call i32 @longjmp(i32 %11, i32 -1)
  ret void
}

declare dso_local i32 @clar_print_onabort(i8*) #1

declare dso_local i32 @clar_report_errors(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @CL_TRACE(i32) #1

declare dso_local i32 @longjmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
